--- a/Time_series_forecasting .ipynb
+++ b/Time_series_forecasting .ipynb
@@ -368,7 +368,7 @@
     "# Remove the outliers from the DataFrame\n",
     "df = df.drop(outliers.index)\n",
     "\n",
-    "# Print the updated DataFrame\n",
+    "# Printing the updated DataFrame\n",
     "print('..........................................')\n",
     "print('updated dataframe ')\n",
     "print(df)"
@@ -391,13 +391,13 @@
    "source": [
     "\n",
     "\n",
-    "# Set 'Date' column as the index\n",
+    "# Setting 'Date' column as the index\n",
     "df.set_index('Date', inplace=True)\n",
     "\n",
-    "# Resample data to weekly frequency\n",
+    "# Resampling data to weekly frequency\n",
     "df_weekly = df.resample('W').mean()\n",
     "\n",
-    "# Resample data to monthly frequency\n",
+    "# Resampling data to monthly frequency\n",
     "df_monthly = df.resample('M').mean()"
    ]
   },
@@ -725,7 +725,7 @@
    ],
    "source": [
     "\n",
-    "# Apply logarithmic transformation\n",
+    "# Applying logarithmic transformation\n",
     "log_transformed_data_weekly = np.log(df_weekly)\n",
     "\n",
     "print(\"Original Data:\")\n",
@@ -861,14 +861,14 @@
     "# Forward filling missing values\n",
     "df_monthly= df_monthly.ffill()\n",
     "\n",
-    "# Perform Augmented Dickey-Fuller test\n",
+    "# Performing Augmented Dickey-Fuller test\n",
     "result = adfuller(df_monthly)\n",
     "\n",
-    "# Extract and print the p-value\n",
+    "# Extracting and printing the p-value\n",
     "p_value = result[1]\n",
     "print(\"p-value:\", p_value)\n",
     "\n",
-    "# Interpret the test result\n",
+    "# Interpreting the test result\n",
     "if p_value < 0.05:\n",
     "    print(\"The data is stationary.\")\n",
     "else:\n",
@@ -931,7 +931,7 @@
    ],
    "source": [
     "\n",
-    "# Apply logarithmic transformation\n",
+    "# Applying logarithmic transformation\n",
     "log_transformed_data_monthly = np.log(df_monthly)\n",
     "\n",
     "print(\"Original Data:\")\n",
